Alteracao no action button

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     available right from your app.
                 </p>
 
-                <a href="" class="action-button">Learn more</a>
+                <a href="" class="action-button">Learn more about us</a>
             </section>
         </main>
     </body>
